cv is returned on call use()
also updated dump() functionality

--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -411,12 +411,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6437083500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6437083500\">\n",
+       "                        <input id=\"group-ds--5191887300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5191887300\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.2</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.3</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -705,12 +705,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6542703300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6542703300\">\n",
+       "                        <input id=\"group-ds--5255286600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5255286600\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.2</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.3</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -828,7 +828,7 @@
        "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001F7E5BD23A0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000026C955D23D0>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the file content in more detail.\n",
@@ -955,23 +955,54 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
+   "id": "06f843e2-dbb0-4a24-a13b-3fbdd08de082",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "using(\"h5py\")"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "StandardAttributeError",
+     "evalue": "The standard attribute \"data_type\" is required but not provided.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStandardAttributeError\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontact\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__author_orcid__\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m h5:\n\u001b[0;32m      2\u001b[0m     h5\u001b[38;5;241m.\u001b[39mdump()\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\h5tbx\\lib\\site-packages\\forge\\_revision.py:328\u001b[0m, in \u001b[0;36mRevision.__call__.<locals>.inner\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    324\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(\u001b[38;5;28mcallable\u001b[39m)  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[0;32m    325\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m    326\u001b[0m     \u001b[38;5;66;03m# pylint: disable=E1102, not-callable\u001b[39;00m\n\u001b[0;32m    327\u001b[0m     mapped \u001b[38;5;241m=\u001b[39m inner\u001b[38;5;241m.\u001b[39m__mapper__(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m--> 328\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcallable\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmapped\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmapped\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\wrapper\\core.py:2006\u001b[0m, in \u001b[0;36mFile.__init__\u001b[1;34m(self, name, mode, layout, attrs, **kwargs)\u001b[0m\n\u001b[0;32m   2004\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   2005\u001b[0m         existing_attrs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 2006\u001b[0m     attrs, skwargs, kwargs \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_attributes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__class__\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m__init__\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2007\u001b[0m \u001b[43m                                                \u001b[49m\u001b[43mexisting_attrs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexisting_attrs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2009\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(skwargs) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m   2010\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m skwargs\u001b[38;5;241m.\u001b[39mitems():\n",
+      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\wrapper\\core.py:144\u001b[0m, in \u001b[0;36mprocess_attributes\u001b[1;34m(cls, meth_name, attrs, kwargs, name, existing_attrs)\u001b[0m\n\u001b[0;32m    142\u001b[0m             logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStandard attribute \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is empty but no alternative attribute given by the user.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    143\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m get_config(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore_standard_attribute_errors\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m--> 144\u001b[0m                 \u001b[38;5;28;01mraise\u001b[39;00m conventions\u001b[38;5;241m.\u001b[39mstandard_attributes\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mStandardAttributeError(\n\u001b[0;32m    145\u001b[0m                     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe standard attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m is required but not provided.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    147\u001b[0m _ \u001b[38;5;241m=\u001b[39m [skwargs\u001b[38;5;241m.\u001b[39mpop(p) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m _pop]\n\u001b[0;32m    149\u001b[0m \u001b[38;5;66;03m# # standard attributes may be passed as arguments or in attrs. But if they are passed in both an error is raised!\u001b[39;00m\n\u001b[0;32m    150\u001b[0m \u001b[38;5;66;03m# for skey, vas in skwargs.items():\u001b[39;00m\n\u001b[0;32m    151\u001b[0m \u001b[38;5;66;03m#     if skey in attrs:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    157\u001b[0m \u001b[38;5;66;03m#                 f'You passed the standard attribute \"{skey}\" as a standard argument and it is '\u001b[39;00m\n\u001b[0;32m    158\u001b[0m \u001b[38;5;66;03m#                 f'also in the \"attrs\" argument. This is not allowed!')\u001b[39;00m\n",
+      "\u001b[1;31mStandardAttributeError\u001b[0m: The standard attribute \"data_type\" is required but not provided."
+     ]
     }
    ],
    "source": [
+    "with h5tbx.File(contact=h5tbx.__author_orcid__) as h5:\n",
+    "    h5.dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "h5tbx.use(None)  # fall back to the default convention"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7cdc750-6857-421c-8a35-b1e9ea6ca0aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20fae79f-255b-46cc-aef0-e644bc96caec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
