update colab notebook [skip ci]

--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "pip install h5rdmtoolbox==0.8.1"
+    "!pip install h5rdmtoolbox==0.8.3"
    ]
   },
   {
